[project]
name = "pyqtprotractor"
version = "0.1.0"
description = "Multiplatform protractor overlay tool for measuring angles on screen"
readme = "README.md"
authors = [
    { name = "Fritz Webering", email = "fritz@webering.eu" }
]
requires-python = ">=3.9"
dependencies = [
    "pyqt5>=5.15.11",
]

[project.scripts]
pyqtprotractor = "pyqtprotractor:main"

[build-system]
requires = ["uv_build>=0.7.20,<0.10.0"]
build-backend = "uv_build"
